--- a/pushy-btns.css
+++ b/pushy-btns.css
@@ -31,6 +31,8 @@
       background-color: #10ac84; }
     .pushy__btn--red {
       background-color: #EE4444; }
+    .pushy__btn--pink {
+      background-color: pink; }
     .pushy__btn--lg {
       font-size: 1.5em; }
     .pushy__btn--df {
